tests/testcases/errors/BCE0061-1.boo
"""
BCE0061-1.boo(6,9): BCE0061: 'Foo.Bar()' is not an override.
"""
class Foo:
	def Bar():
		super()

